# osrust

./: .gitignore  Cargo.toml  LICENSE  README.md  roll_test_cases.txt
notes/: burn_immunities.txt  plans.md  plans.txt  roll_test_cases.txt  ttk_test_cases.txt
python/: generate_equipment.py  generate_monsters.py  manual_equipment.json
src/: attacks.rs  combat.rs  constants.rs  dps_calc.rs  effects.rs  equipment.rs  equipment_db.rs  equipment_json.rs  error.rs  hit_dist.rs  lib.rs  limiters.rs  loadouts.rs  logging.rs  main.rs  monster.rs  monster_db.rs  monster_json.rs  monster_scaling.rs  player.rs  potions.rs  prayers.rs  rolls.rs  specs.rs  spells.rs  utils.rs
src/calc/: analysis.rs  dps_calc.rs  hit_dist.rs  mod.rs  monster_scaling.rs  rolls.rs
src/combat/: limiters.rs  mechanics.rs  mod.rs  simulation.rs  spec.rs  thralls.rs
src/combat/attacks/: effects.rs  mod.rs  specs.rs  standard.rs
src/databases/: equipment.db  equipment.json  equipment_flattened.db  monsters.db  monsters.json  monsters_flattened.db  monsters_old.db
src/dists/: bolts.rs  claws.rs  mod.rs
src/sims/: graardor.rs  hunleff.rs  mod.rs  single_way.rs  vardorvis.rs
src/types/: equipment.rs  food.rs  mod.rs  monster.rs  player.rs  potions.rs  prayers.rs  spells.rs  stats.rs  timers.rs
src/utils/: equipment_json.rs  loadouts.rs  logging.rs  math.rs  mod.rs  monster_db.rs  monster_json.rs
tests/: fixtures.rs  roll_tests.rs  spec_tests.rs  ttk_tests.rs
