[package]
name = "osrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcd = "2.3.0"
lazy_static = "1.4.0"
num = "0.4.2"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
rstest = "0.19.0"
rusqlite = { version = "0.31.0", features = ["bundled"] } 
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = { version = "1.37.0", features = ["full"]}
url = "2.5.0"
